prod-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: certtest-virtual-service
  namespace: default
spec:
  hosts:
  - "httpbin.travelsbuds.com"
  gateways:
  - istio-system/gateway-prod
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: httpbin
        port:
          number: 8000

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wordpres-virtual-service
  namespace: default
spec:
  hosts:
  - "wp.travelsbuds.com"
  gateways:
  - istio-system/gateway-prod
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: wordpress
        port:
          number: 80
